# vkcnn

./: .gitignore  CMakeLists.txt  main.cpp  meson.build  meson_options.txt
.sandbox/: conv3x3mma16x8x8f16_CHWC8_RSCKC8_reuse_no_pipeline.comp  main.cpp  meson.build
builddir/: CMakeCache.txt  Makefile  cmake_install.cmake
common/: meson.build
common/src/vkcnn/common/: FilterMode.hpp  PaddingMode.hpp  PoolFunction.hpp
common/src/vkcnn/common/cmd/: CmdOp.hpp  CmdOpActivation.hpp  CmdOpBarrier.hpp  CmdOpBuffer.hpp  CmdOpConv.hpp  CmdOpCopy.hpp  CmdOpDispatch.hpp  CmdOpPool.hpp  CmdOpSchedule.hpp  CmdOpScheduleHeader.hpp  CmdOpUpsample.hpp  ParameterList.hpp  TODO.md
common/src/vkcnn/common/cmd/record/: CmdRecordBarrier.hpp  CmdRecordDispatch.hpp  SizedRecordHeader.hpp
common/src/vkcnn/common/containers/: linear_map.hpp  small_vector.hpp
common/src/vkcnn/common/hypergraph/: AdjGraph.hpp  ConstGraph.hpp  EdgeId.hpp  NodeId.hpp  NullWeight.hpp  topological_sort.hpp
common/src/vkcnn/common/memory/: align.hpp  monotone_buffer.hpp
common/src/vkcnn/common/model/: CompileModel.hpp  ComputeOp.hpp  ComputeTensor.hpp  Model.hpp  SymTensorExtent.hpp
common/src/vkcnn/common/mr/: MemoryRequirements.hpp  TensorID.hpp
common/src/vkcnn/common/ops/: OpActivation.hpp  OpConv.hpp  OpCopy.hpp  OpPool.hpp  OpUpsample.hpp
common/src/vkcnn/common/shader/: ActivationShaderSource.hpp  ConvShaderSource.hpp  CopyShaderSource.hpp  PoolShaderSource.hpp  ShaderDefines.hpp  SpecializationConstants.hpp  UpsampleShaderSource.hpp
common/src/vkcnn/common/symbolic/: Sym.hpp  SymAdjGraph.hpp  SymConstGraph.hpp  SymEval.hpp  SymGraph.cpp  SymGraph.hpp  SymGraph_add_entry.cpp  SymGraph_affine.cpp  SymGraph_affine_symbol_cache.inl  SymGraph_api.cpp  SymGraph_api_templates.inl  SymGraph_debug.cpp  SymGraph_div_entry.inl  SymGraph_helpers.cpp  SymGraph_max_entry.inl  SymGraph_min_entry.inl  SymGraph_mod_entry.cpp  SymGraph_modsolver.inl  SymGraph_modsolver_cache.cpp  SymGraph_mul_entry.cpp  SymGraph_nonaffine.inl  SymGraph_nonaffine_symbol_cache.cpp  SymGraph_nonaffine_symbol_cache.inl  SymGraph_sub_entry.cpp  SymGraph_sub_entry.inl  SymGraph_types.inl  SymIdMapping.hpp  SymOp.hpp  SymValue.hpp  SymVar.hpp  Symbolic.hpp  modsolve.cpp  modsolve.hpp
common/src/vkcnn/common/tensor/: ActivationHostTensor.cpp  ActivationHostTensor.hpp  ActivationLayout.hpp  ActivationShape.hpp  BiasDescriptor.hpp  BiasHostTensor.cpp  BiasHostTensor.hpp  BiasLayout.hpp  FilterHostTensor.cpp  FilterHostTensor.hpp  FilterLayout.hpp  FloatType.cpp  FloatType.hpp  WeightDescriptor.hpp
dev/: meson.build  perf_ceiling.py  shared_memory_per_wg.py
dev/sandbox/: meson.build
dev/sandbox/src/: main.cpp
dev/survey/: meson.build
dev/survey/src/vkcnn/dev/survey/: conv.cpp  conv.hpp  main.cpp
dev/tests/: meson.build
dev/tests/src/: env.cpp  env.hpp  main.cpp
dev/tests/src/ops/: conv.cpp
dev/tests/src/symbolic/: affine.cpp  common.cpp  modsolve.cpp  modsolve2.cpp  nonaffine.cpp  unsolvable.cpp
dev/utils/: meson.build
dev/utils/src/vkcnn/dev/utils/: merian.cpp  tensor_algorithms.cpp  tensor_algorithms.hpp  to_string.cpp  to_string.hpp  torch.cpp  torch.hpp
gos/: meson.build
gos/src/vkcnn/gos/: SuperGraph.hpp  compile.cpp  compile.hpp
graph/: meson.build
graph/src/vkcnn/graph/: ComputeGraph.hpp  ComputeOp.hpp  ComputeTensor.hpp
runtime/: meson.build
runtime/src/vkcnn/runtime/activation/: ActivationPipeline.cpp  ActivationPipeline.hpp
runtime/src/vkcnn/runtime/conv/: ConvPipeline.cpp  ConvPipeline.hpp
runtime/src/vkcnn/runtime/copy/: CopyPipeline.cpp  CopyPipeline.hpp
runtime/src/vkcnn/runtime/pool/: PoolPipeline.cpp  PoolPipeline.hpp
runtime/src/vkcnn/runtime/tensor/: ActivationDeviceTensor.cpp  ActivationDeviceTensor.hpp  BiasDeviceTensor.cpp  BiasDeviceTensor.hpp
runtime/src/vkcnn/runtime/upsample/: UpsamplePipeline.cpp  UpsamplePipeline.hpp
shaders/: meson.build
shaders/src/vkcnn/shaders/: preprocessing.cpp  preprocessing.hpp
shaders/src/vkcnn/shaders/activation/: Activation.cpp  Activation.hpp  ActivationShader.cpp  ActivationShader.hpp  IActivationShader.cpp  IActivationShader.hpp  activation.comp
shaders/src/vkcnn/shaders/conv/: Conv3x3mma16x16x16f16_CHWC16_RCSKC16_HR_P1.cpp  Conv3x3mma16x16x16f16_CHWC16_RCSKC16_HR_P1.hpp  Conv3x3mma16x8x8_CHWC8_RCSKC8_HR_P2.cpp  Conv3x3mma16x8x8_CHWC8_RCSKC8_HR_P2.hpp  Conv3x3mma16x8x8_CHWC8_RCSKC8_HR_P3.cpp  Conv3x3mma16x8x8_CHWC8_RCSKC8_HR_P3.hpp  Conv3x3mma16x8x8_CHWC8_RSCKC8_NR_P2.cpp  Conv3x3mma16x8x8_CHWC8_RSCKC8_NR_P2.hpp  Conv3x3mmaVectorized.cpp  Conv3x3mmaVectorized.hpp  ConvGEMM.cpp  ConvGEMM.hpp  ConvTemplate.hpp  DirectConvShader.cpp  DirectConvShader.hpp  IConvShader.cpp  IConvShader.hpp  conv3x3mma16x16x16f16_CHWC16_RCSKC16_HR_P1.comp  conv3x3mma16x8x8f16_CHWC8_RCSKC8_HR_P2.comp  conv3x3mma16x8x8f16_CHWC8_RCSKC8_HR_P2_backup.comp  conv3x3mma16x8x8f16_CHWC8_RCSKC8_HR_P2_backup1.comp  conv3x3mma16x8x8f16_CHWC8_RCSKC8_HR_P2_backup2.comp  conv3x3mma16x8x8f16_CHWC8_RCSKC8_HR_P2_generalized.comp  conv3x3mma16x8x8f16_CHWC8_RSCKC8_NR_P2.comp  conv3x3mmaVectorized.comp  conv3x3mmaVectorized_backup.comp  conv3x3mmaVectorized_backup2.comp  conv3x3mmaVectorized_cleanBackup.comp  conv_gemm.comp  direct_conv.comp  ncnn_conv_cm.comp
shaders/src/vkcnn/shaders/copy/: Copy.hpp  CopyTransform.cpp  CopyTransform.hpp  CopyTransformShader.cpp  CopyTransformShader.hpp  ICopyShader.cpp  ICopyShader.hpp  copy_transform.comp
shaders/src/vkcnn/shaders/pool/: DirectPoolShader.cpp  DirectPoolShader.hpp  IPoolShader.cpp  IPoolShader.hpp  direct_pool.comp
shaders/src/vkcnn/shaders/upsample/: DirectUpsampleShader.cpp  DirectUpsampleShader.hpp  IUpsampleShader.cpp  IUpsampleShader.hpp  direct_upsample.comp
subprojects/: libtorch.wrap
subprojects/packagefiles/libtorch/: meson.build
